--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "proxy": "https://localhost:7032",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
